--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.3.4
+autopep8==1.5.7
 Django==3.2.3
 django-environ==0.4.5
 django-split-settings==1.0.1
 paho-mqtt==1.5.1
+pycodestyle==2.7.0
 pytz==2021.1
 sqlparse==0.4.1
+toml==0.10.2
